[package]
name = "dam-networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dam = { git = "ssh://git@github.com/stanford-ppl/DAM-RS.git", branch = "dev", default-features = false, features = ["dot"]}
fxhash = "0.2.1"
